add jquery utils
add jquery utils

--- a/jQuery/jquery-st/method.html
+++ b/jQuery/jquery-st/method.html
@@ -26,5 +26,11 @@
             兼容性//策略模式
         -->
         <script src="../../lib/jQuery/jquery-1.11.3.js"></script>
+
+        <script type="text/javascript">
+            var str = "once memory";
+            var reg = /\S+/g;
+            var ss = str.match(reg);
+        </script>
     </body>
 </html>
