add customer talk for detail page
add customer talk for detail page

--- a/imooc/detail.html
+++ b/imooc/detail.html
@@ -142,7 +142,7 @@
                                 </dl>
                                 <p class="customer-selected">已选择 <span class="selected-content">“白色|WIFI 16G”</span></p>
                                 <div class="add-cart-purchase fix">
-                                    <div class="add-wrapper"><span class="add-common add-cart">加入购物车</span></div>
+                                    <div class="add-wrapper add-wrapper-self"><span class="add-common add-cart">加入购物车</span></div>
                                     <div class="add-wrapper"><span class="add-common add-purchase">立即购买</span></div>
                                     
                                 </div>
@@ -154,11 +154,109 @@
                     <setion class="detail-refer fix">
                         <!-- refer same price -->
                         <div class="refer-wrapper-left">
-                            left
+                            <section class="same-common-wrapper">
+                                <h3 class="same-title same-first">同价位</h3>
+                                <ul class="same-common">
+                                    <li class="same-item">
+                                        <img src="images/sameprice1.gif" />
+                                        <p class="same-info">Samsung 三星 GALAXY Tab 3 8.0 WLAN版本 T310平板电话</p>
+                                        <p class="same-price">¥3588.00</p>
+                                    </li>
+                                    <li class="same-item">
+                                        <img src="images/sameprice1.gif" />
+                                        <p class="same-info">Samsung 三星 GALAXY Tab 3 8.0 WLAN版本 T310平板电话</p>
+                                        <p class="same-price">¥3588.00</p>
+                                    </li>
+                                </ul>
+                            </section>
+                            <section class="same-common-wrapper">
+                                <h3 class="same-title">233</h3>
+                                <ul class="same-common">
+                                    <li class="same-item">
+                                        <img src="images/sameprice1.gif" />
+                                        <p class="same-info">Samsung 三星 GALAXY Tab 3 8.0 WLAN版本 T310平板电话</p>
+                                        <p class="same-price">¥3588.00</p>
+                                    </li>
+                                    <li class="same-item">
+                                        <img src="images/sameprice1.gif" />
+                                        <p class="same-info">Samsung 三星 GALAXY Tab 3 8.0 WLAN版本 T310平板电话</p>
+                                        <p class="same-price">¥3588.00</p>
+                                    </li>
+                                </ul>
+                            </section>
                         </div><!-- refer same price end -->
                         <!-- refer talk -->
                         <div class="refer-wrapper-right">
-                            right
+                            <div class="refer-wrapper-right-inner">
+                                <setion>
+                                    <nav class="refer-tab">
+                                        <ul class="refer-tab-items fix">
+                                            <li class="refer-tab-item tab-first-self"><i class="tab-icon tab-info"></i>产品介绍</li>
+                                            <li class="refer-tab-item tab-active"><i class="tab-icon tab-talk"></i>商品评价（4725）</li>
+                                        </ul>
+                                    </nav>
+                                    <div class="tab-content">
+                                        <article class="tab-content-wrapper tab-gap70">
+                                            <h3 class="content-title">商品评价</h3>
+                                            <dl class="content-content-common">
+                                                <dt class="content-title-common content-title-self"><span class="score">4.7</span>分</dt>
+                                                <dd class="contet-common">
+                                                    <div class="score-wrapper"><span class="score-icon"> 4.7</span></div>
+                                                    <ul class="content-common-items fix content-items-self">
+                                                        <li class="content-common-item content-item-self">非常不满意</li>
+                                                        <li class="content-common-item content-item-self">不满意</li>
+                                                        <li class="content-common-item content-item-self">一般</li>
+                                                        <li class="content-common-item content-item-self">满意</li>
+                                                        <li class="content-common-item content-item-self">非常满意</li>
+                                                    </ul>
+                                                    <p class="customer-score">共18939位慕课网友参与评分</p>
+                                                </dd>
+                                            </dl>
+                                        </article>
+                                        <article class="tab-content-wrapper">
+                                            <div class="fix middle-wrapper">
+                                                <ul class="middle-header-left">
+                                                    <li class="content-common-item mid-active">
+                                                        <a class="mid-a-item">全部</a>
+                                                    </li>
+                                                    <li class="content-common-item">
+                                                        <a class="mid-a-item">满意（17490）</a>
+                                                    </li>
+                                                    <li class="content-common-item">
+                                                        <a class="mid-a-item">一般（549）</a>
+                                                    </li>
+                                                    <li class="content-common-item">
+                                                        <a class="mid-a-item">不满意（743）</a>
+                                                    </li>
+                                                </ul>
+                                                <div class="score-wrapper"><span class="middle-new">new</span></div>
+                                                <ul class="middle-header-right">
+                                                    <li class="content-common-item">
+                                                        <a class="mid-sort-item mid-sort-left">时间排序</a>
+                                                    </li>
+                                                    <li class="content-common-item">
+                                                        <a class="mid-sort-item">推荐排序</a>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                            
+
+                                            <dl class="content-content-common">
+                                                <dt class="content-title-common">
+                                                    <img />
+                                                    <p>61***42</p>
+                                                    <p>金色会员</p>
+                                                </dt>
+                                                <dd class="contet-common">
+                                                    <span>5分 满意</span>
+                                                    <p>挺不错的，信赖慕课</p>
+                                                    <p>踩（0） 顶（0）</p>
+                                                </dd>
+                                            </dl>
+                                        </article>
+                                    </div>
+                                </setion>
+                            </div>
                         </div><!-- refer talk end -->
                     </setion><!-- detail refers end -->
                 </div><!-- detail support end -->
