--- a/imooc/detail.html
+++ b/imooc/detail.html
@@ -241,16 +241,42 @@
                                             </div>
                                             
 
-                                            <dl class="content-content-common">
-                                                <dt class="content-title-common">
-                                                    <img />
+                                            <dl class="content-content-common fix">
+                                                <dt class="content-title-common customer-left">
+                                                    <img src="images/customer.gif" />
                                                     <p>61***42</p>
                                                     <p>金色会员</p>
                                                 </dt>
-                                                <dd class="contet-common">
-                                                    <span>5分 满意</span>
+                                                <dd class="contet-common customer-rignt">
+                                                    <span class="fix">
+                                                        <span class="customer-star"></span>
+                                                        <span class="customer-star"></span>
+                                                        <span class="customer-star"></span>
+                                                        <span class="customer-star"></span>
+                                                        <span class="customer-star"></span>
+                                                        5分 满意
+                                                    </span>
                                                     <p>挺不错的，信赖慕课</p>
-                                                    <p>踩（0） 顶（0）</p>
+                                                    <p><a>踩（0）</a><a> 顶（0）</a></p>
+                                                </dd>
+                                            </dl>
+                                            <dl class="content-content-common fix">
+                                                <dt class="content-title-common customer-left">
+                                                    <img src="images/customer.gif" />
+                                                    <p>61***42</p>
+                                                    <p>金色会员</p>
+                                                </dt>
+                                                <dd class="contet-common customer-rignt">
+                                                    <span class="fix">
+                                                        <span class="customer-star"></span>
+                                                        <span class="customer-star"></span>
+                                                        <span class="customer-star"></span>
+                                                        <span class="customer-star"></span>
+                                                        <span class="customer-star"></span>
+                                                        5分 满意
+                                                    </span>
+                                                    <p>挺不错的，信赖慕课</p>
+                                                    <p><a>踩（0）</a><a> 顶（0）</a></p>
                                                 </dd>
                                             </dl>
                                         </article>
