--- a/underscore-st/underscore.html
+++ b/underscore-st/underscore.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Bootstrap的HTML标准模板</title>   
         <!-- Bootstrap -->
-        <link href="../../lib/bootstrap-lib/css/bootstrap.min.css" rel="stylesheet">
+        <link href="../lib/bootstrap-lib/css/bootstrap.min.css" rel="stylesheet">
         <!--你自己的样式文件 --> 
         <!-- 以下两个插件用于在IE8以及以下版本浏览器支持HTML5元素和媒体查询，如果不需要用可以移除 -->
         <!--[if lt IE 9]>
@@ -16,26 +16,14 @@
         </style>
     </head>
     <body style="padding-top:50px;">
-      <script type="text/javascript" src="../../lib/jQuery/jquery-2.0.3.js"></script>
-      <script type="text/javascript">
-        $(function(){
-          var flag = true;
-          function aa(){
-            alert(1);
-            if(flag){
-              cbks.add(cc);
-            }
-          }
-          function bb(){
-            alert(2);
-          }
-          function cc(){
-            alert(3);
-          }
-          var cbks = $.Callbacks();
-          cbks.add(aa,bb);
-          cbks.fire();
-        });
-      </script>
+        <script type="text/javascript" src="../lib/jQuery/jquery-1.11.3.js"></script>
+        <script type="text/javascript" src="../lib/underscore/underscore-1.8.2.js"></script>
+        <script type="text/javascript">
+            $(function(){
+              _.forEach({one: 1, two: 2, three: 3},function(value,index,list){
+                
+              });
+            });
+        </script>
     </body>
 </html>
