--- a/pattern/temp.html
+++ b/pattern/temp.html
@@ -6,16 +6,23 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Bootstrap的HTML标准模板</title>   
         <!-- Bootstrap -->
-        <link href="../lib/bootstrap-lib/css/bootstrap.min.css" rel="stylesheet">
+        <link href="../../lib/bootstrap-lib/css/bootstrap.min.css" rel="stylesheet">
         <!--你自己的样式文件 --> 
+
         <!-- 以下两个插件用于在IE8以及以下版本浏览器支持HTML5元素和媒体查询，如果不需要用可以移除 -->
         <!--[if lt IE 9]>
         <script src="../../lib/bootstrap-lib/html5shiv.js"></script>
         <script src="../../lib/bootstrap-lib/respond.min.js"></script>
         <![endif]-->
-        </style>
     </head>
-    <body style="padding-top:50px;">
-       <script type="text/javascript" src="Object-st.js"></script>
+    <body>
+        <div>
+            123
+        </div>
+        <!-- 如果要使用Bootstrap的js插件，必须先调入jQuery -->
+        <script src="../../lib/jQuery/jquery-1.11.3.js"></script>
+        <!-- 包括所有bootstrap的js插件或者可以根据需要使用的js插件调用　-->
+        <script src="../../lib/bootstrap-lib/js/bootstrap.js"></script>
+        <script src="../lib/require/require.js" data-main="./js/state"></script>
     </body>
 </html>
